scripts/nullaway/annotator/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8.txt
../annotator/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/game/GameController.java:33: error: [NullAway] assigning @Nullable expression to @NonNull field
    private GameField gameField = null;
                      ^
    (see http://t.uber.com/nullaway )
../annotator/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/movestrategies/ShortestPathMoveStrategy.java:42: error: [NullAway] dereferenced expression currentInfo is @Nullable
                if(neighbourInfo == null || neighbourInfo.pathLength > currentInfo.pathLength + 1) {
                                                                                  ^
    (see http://t.uber.com/nullaway )
../annotator/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/movestrategies/ShortestPathMoveStrategy.java:43: error: [NullAway] dereferenced expression currentInfo is @Nullable
                    nodesInfo.put(neighbour, new BFSNodeInfo(current, currentInfo.pathLength + 1));
                                                                                 ^
    (see http://t.uber.com/nullaway )
../annotator/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/movestrategies/ShortestPathMoveStrategy.java:59: error: [NullAway] dereferenced expression currentInfo is @Nullable
        while (!currentInfo.predecessor.equals(current)) {
                           ^
    (see http://t.uber.com/nullaway )
../annotator/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/gameprinters/BasicGamePrinter.java:27: error: [NullAway] initializer method does not guarantee @NonNull fields lightAreaStart (line 24), lightAreaEnd (line 25) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    protected BasicGamePrinter(int fieldWidth, int fieldHeight) {
              ^
    (see http://t.uber.com/nullaway )
5 errors
